# sparky

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  TAURI_GUIDE.md  build.rs  build.sh  config.yaml  feishu_ws_client.py  package.json  review.md  start-dev.sh  test-report.md  test_feishu.py  test_notification.json  test_ws_only.py  update.md  操作指引.md
.claude/: settings.local.json.example
proto/: pbbp2.proto
relay-server/: Cargo.toml  Dockerfile  Makefile
relay-server/src/: handler.rs  lib.rs  main.rs  state.rs
src/: config.rs  feishu.rs  hooks.rs  main.rs  server.rs  websocket.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  pty.rs  relay_client.rs  remote_worker.rs  websocket.rs
ui/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.css  App.tsx  WebApp.tsx  index.css  main.tsx
ui/src/components/: ActionCard.tsx  ChatView.tsx  MessageBubble.tsx  Terminal.tsx  UserInput.tsx
ui/src/hooks/: useLocalWorker.ts  usePty.ts  useWebSocket.ts
ui/src/store/: chatStore.ts
ui/src/types/: index.ts
