[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
futures-util = "0.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "relay-server"
path = "src/main.rs"
