[package]
name = "claude-monitor-app"
version = "0.1.0"
description = "Claude Code Monitor with Feishu Integration"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }
prost-build = "0.13"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
dirs = "5.0"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
prost = "0.13"
flate2 = "1.0"
portable-pty = "0.8"
